# Rosetta_Analysis

./: .gitignore  PAPER_MAP.md  PIPELINE_MIGRATION_PLAN.md  README.md  pyproject.toml  pytest.ini  requirements.txt
alignment/: align.py  align_depth_matched.py  align_random_calib.py  align_trajectory.py  p5_permutation_test.py  peak_distribution.py  peak_vs_nonpeak.py  peak_vs_nonpeak_xval.py  prh_cluster_bootstrap.py  prh_permuted_null_percluster.py  prh_permuted_null_percluster_gpu.py  prh_permuted_null_streaming.py
caz/: analyze.py  analyze_caz_ablation_calibration.py  analyze_coasting.py  analyze_scored.py  analyze_structure.py  audit_data_freeze.py  caz_ablation_control.py  caz_flavour_analysis.py  cka_validation.py  cka_validation_local.py  compare_caz_sae_curves.py  compute_shared_pca.py  deep_dive.py  deep_dive_local.py  detect_manifolds.py  gemma_scope_xval.py  permutation_null.py  probe_shallow_deep.py  saddle_vs_rotation.py
data/: sham_pairs.jsonl
extraction/: extract.py  generate_consensus_pairs.py  generate_sham_concept.py  precache_models.py  validate_pairs.py
gem/: ablate.py  ablate_behavioral_pilot.py  ablate_dark_matter.py  ablate_gem.py  ablate_gem_adaptive_width.py  ablate_gem_behavioral.py  ablate_gem_depth_matched_control.py  ablate_gem_multi_zone.py  ablate_gem_permutation.py  ablate_gem_random_window_null.py  ablate_gem_width_sensitivity.py  ablate_global_sweep.py  ablate_multimodal.py  ablate_multimodal_local.py  ablate_noncaz_control.py  ablate_propagation.py  ablate_random_direction.py  ablate_random_layer_null.py  analyze_gem_failures.py  (+22 more)
(+118 files in other folders)
